# websocket-ai-experiment

./: pyproject.toml
backend/: pyproject.toml
backend/src/websocket_ai_experiment/: main.py
backend/static/: frontend.html
frontend/src/: App.tsx
src/websocket_ai_experiment/: main.py
