[project]
name = "websocket-ai-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ollama>=0.5.3",
    "uuid>=1.30",
    "websockets>=15.0.1",
]

[project.scripts]
main = "websocket_ai_experiment:main.main"
